--- a/themes/md2/css/mdNew.css
+++ b/themes/md2/css/mdNew.css
@@ -540,3 +540,18 @@ header{
     background-size: 21px 16px;
     background-position: 50% 50%;
 }
+
+/*我的患者*/
+#patientList_nav .searchDiv{
+    border-radius: 4px;
+    background-color: #fff;
+    margin-top: 5px;
+    color: #333333;
+}
+#patientList_nav .searchIcon{
+    background: url('../images/searchBlack.png') no-repeat;
+    background-size: 14px 14px;
+    width: 24px;
+    background-position-x: 5px;
+    background-position-y: 7px;
+}
