登录 注册 找回密码 患者详情页面优化

--- a/themes/md2/css/md.css
+++ b/themes/md2/css/md.css
@@ -456,7 +456,7 @@ header{
 }
 #login_article .btn-sendSmsCode{
     background-color: #fff!important;
-    color: #888!important;
+    color: #19aea6!important;
     height: 40px;
     border-radius: 5px;
 }
@@ -492,7 +492,7 @@ header{
 }
 #register_article .btn-sendSmsCode {
     background-color: #fff!important;
-    color: #888!important;
+    color: #19aea6!important;
     height: 40px;
     border-radius: 5px;
 }
@@ -526,7 +526,7 @@ header{
 }
 #forgetPassword_article .btn-sendSmsCode {
     background-color: #fff!important;
-    color: #888!important;
+    color: #19aea6!important;
     height: 40px;
     border-radius: 5px;
 }
