实名认证优化

--- a/themes/md2/css/form.css
+++ b/themes/md2/css/form.css
@@ -105,6 +105,7 @@ button [disabled]{
 .mb30{margin-bottom:30px;}
 .mb40{margin-bottom:40px;}
 .mb50{margin-bottom:50px;}
+.ml0{margin-left:0px;}
 .ml3{margin-left:3px;}
 .ml5{margin-left:5px;}
 .ml6{margin-left:6px;}
