--- a/themes/md2/css/form.css
+++ b/themes/md2/css/form.css
@@ -52,8 +52,6 @@
     border:1px solid #A9A9A9;
 }
 
-
-
 /*button*/
 /*
 button .fff, [type=button] .fff{
@@ -70,8 +68,8 @@ button [disabled]{
 }
 */
 
-
 /*边距*/
+.mt-12 {margin-top: -12px;}
 .mt1{margin-top:1px;}
 .mt3{margin-top:3px;}
 .mt5{margin-top:5px;}
@@ -79,9 +77,12 @@ button [disabled]{
 .mt11{margin-top:11px;}
 .mt12{margin-top:12px;}
 .mt15{margin-top:15px;}
+.mt16{margin-top:16px;}
 .mt18{margin-top:18px;}
 .mt20{margin-top:20px;}
+.mt21{margin-top:21px;}
 .mt25{margin-top:25px;}
+.mt26{margin-top:26px;}
 .mt30{margin-top:30px;}
 .mt35{margin-top:35px;}
 .mt40{margin-top:40px;}
@@ -109,6 +110,7 @@ button [disabled]{
 .ml3{margin-left:3px;}
 .ml5{margin-left:5px;}
 .ml6{margin-left:6px;}
+.ml7{margin-left:7px;}
 .ml10{margin-left:10px;}
 .ml15{margin-left:15px;}
 .ml20{margin-left:20px;}
@@ -144,6 +146,7 @@ button [disabled]{
 .pt40{padding-top:40px;}
 .pt50{padding-top:50px;}
 .pt55{padding-top:55px;}
+.pt64 {padding-top: 64px;}
 .pb2{padding-bottom:2px;}
 .pb5{padding-bottom:5px;}
 .pb8{padding-bottom:8px;}
@@ -172,12 +175,7 @@ button [disabled]{
 .pr30{padding-right:30px;}
 .pr40{padding-right:40px;}
 .pr50{padding-right:50px;}
-
 .ml-10{margin-left:15%;}
-
-
-
-
 
 /*宽高*/
 .h10{height:10px!important;}
@@ -198,7 +196,9 @@ button [disabled]{
 .w5{width:5%;}
 .w10{width:10%;}
 .w20{width:20%;}
+.w24{width:24%;}
 .w25{width:25%;}
+.w28{width:28%;}
 .w30{width:30%;}
 .w33{width:33.333%;}
 .w40{width:40%;}
@@ -245,6 +245,7 @@ button [disabled]{
 .w100p{width:100px!important;}
 .w110p{width:110px!important;}
 .w140p{width:140px!important;}
+.w170p {width: 170px;}
 .h5p{height:5px!important;}
 .h10p{height:10px!important;}
 .h60p{height:60px!important;}
@@ -263,21 +264,19 @@ button [disabled]{
 a .none{text-decoration:none;}
 .hide{display:none;}
 
-
 /*font*/
-
 .font-w{font-weight:bold;}
 .font-s12{font-size:12px!important;}
 .font-s15{font-size:15px!important;}
 .font-s14{font-size:14px!important;}
 .font-s16{font-size:16px!important;}
 .font-s18{font-size:18px!important;}
+.font-s21{font-size:21px!important;}
 .font-w800{font-weight:800;}
 .line-h{line-height:30px;}
 .line-h1e{line-height:1em;}
 .line-h13e{line-height:1.3em;}
 .text-indent-2{text-indent: 2em;}
-
 
 /*background-color*/
 .bg-white{background-color: #fff;}
@@ -288,11 +287,14 @@ a .none{text-decoration:none;}
 .bg-gray{background-color:rgba(221, 221, 221, 0.58);}
 .bg-gray2{background-color:#EAEFF1;}
 .bg-yellow{background-color:#fe8c08!important;}
+.bg-yellow2{background-color: #efe427!important;}
+.bg-blue2 {background-color: #2796c3;}
 .color-000{color:#333333!important;}
 .color-ddd{color:#ddd;}
 .color-fff{color:#fff!important;}
 .color-green{color:#19aea6!important;}
 .color-green2{color:#18aea5;}
+.color-green4 {color: #4de23e!important;}
 .color-red{color:red;}
 .color-red1{color:#e61e19!important;}
 .color-red2{color:#de4b4b!important;}
@@ -304,8 +306,12 @@ a .none{text-decoration:none;}
 .color-black2{color:#003333!important;}
 .color-black3{color:#333333;}
 .color-black6{color:#666666;}
+.color-black7 {color: #5C5C5C!important;}
 .color-gray4{color:#999999!important;}
+.color-gray5 {color: #7E7E7E!important;}
+.color-gray6 {color: #9A9B9B!important;}
 .color-blue{color:#36b4d4;}
+.color-blue2{color: #2795c3!important;}
 
 /*button*/
 .yellow-button{border-radius: 5px;background-color: #fe8c08;line-height: 1em;color: #fff;height:32px;padding-top: 7px;}
@@ -335,11 +341,9 @@ a .none{text-decoration:none;}
 .bb-green{border-bottom: 1px solid #19aea6;}
 .bt5-gray{border-top: 5px solid #E4E4E4;}
 .bb5-gray{border-bottom: 5px solid #E4E4E4;}
+.bt-blue {border-top: 1px solid #c0e0ed;}
 .br5{border-radius:5px;}
-
-
-
-
+.br3{border-radius:3px;}
 
 /*button*/
 .btn-green{background-color:#19aea5;color:#fff!important;border-radius:5px}
