注册异步登录 收到的预约优化

--- a/themes/md2/css/form.css
+++ b/themes/md2/css/form.css
@@ -67,6 +67,7 @@ button [disabled]{
         color:#fff;
 }
 */
+body {-webkit-overflow-scrolling: touch;overflow-scrolling: touch;}
 
 /*边距*/
 .mt-12 {margin-top: -12px;}
