--- a/themes/md2/css/md.css
+++ b/themes/md2/css/md.css
@@ -820,3 +820,8 @@ header{
         padding-right: 10px;
     }
 }
+
+/*收到预约详情*/
+#patientBookingView .list>li.noBorderTop:first-child {
+    border-top: inherit;
+}
