就诊意向改版

--- a/themes/md2/css/form.css
+++ b/themes/md2/css/form.css
@@ -343,6 +343,7 @@ a .none{text-decoration:none;}
 .b-green-b1{border-bottom:1px solid #06c1ac;}
 .bd-gray{border:1px dashed #dfdfdf;}
 .br-gray{border-right:1px solid #dfdfdf;}
+.br-gray2{border-right:1px solid #f2f2f2;}
 .bb-gray{border-bottom:1px solid #dfdfdf;}
 .bb-gray3{border-bottom:1px solid #f2f2f2;}
 .bt-gray2{border-top:1px solid #e1e1e1;}
