--- a/themes/md2/css/md.css
+++ b/themes/md2/css/md.css
@@ -30,7 +30,8 @@ form span.required{display: none;}
 #jingle_popup_mask.active{opacity: 0.3!important;display: block!important;min-height: 60em;}
 .popup-title{text-align: center;font-size: 20px;}
 #popup_btn_container>a{display: block!important;}
-.imgpopup{padding: 2.3em;background-color:rgba(0,0,0,0.3);}
+.imgpopup{padding: 2.3em;background-color:#A7ABAB;text-align:center;}
+#tag_close_popup{display:none;}
 .pad2{padding: 2.3em;}
 #tag_close_popup {color: #fff!important;}
 #successConfirm,#deleteConfirm{background-color: #fff;position: fixed;}
@@ -48,7 +49,7 @@ header nav.right .header-user{height: 28px;}
 .confirmPage .btn{display: block;}
 .confirmPage{display: none;position: fixed;margin:0;text-align: center;top: 39px;width: 100%;min-height: 44em;z-index: 999;background-color:rgba( 0, 0, 0, 0.5 );padding: 40% 0;}
 .confirmPage .confirmcontent{width: 90%;margin: 0 auto;background-color: #fff;padding: 1em;}
-#imgConfirm{padding: 1em;}
+
 /**** 上传病历 ****/
 .patientinfo span{padding: 0 9px;}
 .border-right{border-right: 1px solid #888;}
