--- a/themes/md2/css/md.css
+++ b/themes/md2/css/md.css
@@ -592,38 +592,27 @@ header{
 /*我的订单*/
 #bookingList_nav.header-secondary{
     top: 0px;
-    height: 40px;
+    height: 50px;
 }
 #bookingList_nav.header-secondary~article{
-    top: 40px;
+    top: 50px;
 }
-#bookingList_nav .control-group li:first-child{
-    border-radius: 0px;
-}
-#bookingList_nav .control-group{
-    border-radius: 0px;
-}
-#bookingList_nav .control-group li:last-child{
-    border-radius: 0px;
-}
-#bookingList_nav .control-group li{
-    border: inherit;
-    padding: 0px;
-}
-#bookingList_nav .control-group li div.statusLine{
-    padding: 4px 0px;
-}
-#bookingList_nav .control-group li>a{
-    color: #333333;
-}
-#bookingList_nav .control-group li.active{
+#bookingList_nav .statusLine .active{
     background: #fff;
 }
-#bookingList_nav .control-group li.active div.statusLine{
+#bookingList_nav .statusLine .active div.statusIcon{
     border-bottom: 2px solid #06c1ae;
 }
-#bookingList_nav .control-group li.active a, .control-group li.active .icon{
+#bookingList_nav .statusLine .active a{
     color: #06c1ae;
+}
+#bookingList_nav .statusText{
+    line-height: 28px;
+}
+#bookingList_nav .statusNum{
+    line-height: 20px;
+    height: 20px;
+    font-size: 12px;
 }
 
 /*预约详情*/
